--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,10 @@
     transform: rotate(360deg);
   }
 }
+
+.heading {
+  font-size: 24px;
+  color: #4a90e2;
+  margin-bottom: 10px;
+  text-align: center;
+}
