--- a/src/components/styles/navbar.css
+++ b/src/components/styles/navbar.css
@@ -1,6 +1,6 @@
 .navbar{
   width: 100%;
-  background-color: #efb11d;   
+  background-color: #007bff;   
   height: 70px;
   display: flex;
   justify-content: space-between;
