--- a/src/components/client/styles/CustomerTable.css
+++ b/src/components/client/styles/CustomerTable.css
@@ -1,16 +1,15 @@
 /* Container for customer information */
+
 .customer-info-container {
-    margin: 20px;
-    padding: 20px;
+    height: 300px;
     overflow: scroll;
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   }
- ::-webkit-scrollbar {
+  ::-webkit-scrollbar {
     width: 0;
-  }  
-  
+  }
   /* Table styling */
   .customer-info-table {
     width: 100%;
@@ -32,9 +31,14 @@
     background-color: #e43d12 !important;
     color: #fff;
     font-weight: bold;
-    height: 80px;
+    height: 60px;
+    position: sticky;
+    top: 0;
   }
 
+  .customer-info-table tbody{
+    margin: 20px;
+  }
   .customer-info-table tbody tr:nth-child(even) {
     background-color: #f9f9f9;
   }
@@ -70,47 +74,8 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
- /* .accept-btn{
-    background-color: #4a90e2 !important;
- } */
  .reject-btn{
     background-color: #fe6161 !important;
  }
 
-  
-  /* Responsive styling */
-  @media (max-width: 600px) {
-    .customer-info-table thead {
-      display: none;
-    }
-  
-    .customer-info-table,
-    .customer-info-table tbody,
-    .customer-info-table tr,
-    .customer-info-table td {
-      display: block;
-      width: 100%;
-    }
-  
-    .customer-info-table tr {
-      margin-bottom: 15px;
-    }
-  
-    .customer-info-table td {
-      text-align: right;
-      padding-left: 50%;
-      position: relative;
-    }
-  
-    .customer-info-table td::before {
-      content: attr(data-label);
-      position: absolute;
-      left: 0;
-      width: 50%;
-      padding-left: 15px;
-      font-weight: bold;
-      text-align: left;
-    }
-  }
-  
   
