--- a/src/components/client/styles/TableSwitch.css
+++ b/src/components/client/styles/TableSwitch.css
@@ -1,10 +1,8 @@
 .customer-table-section {
-    padding: 20px;
     background-color: #f8f9fa;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 1000px;
-    margin: 0 auto;
     max-height: 80vh;
     font-family: Arial, sans-serif;
     overflow: hidden;
@@ -45,7 +43,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
   }
   
   .search-bar {
@@ -62,11 +60,42 @@
     border: 1px solid #ddd;
     border-radius: 5px;
     font-size: 16px;
-    width: 35%;
+    /* width: 35%; */
+  }
+  .sort-dropdown {
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    font-size: 16px;
+    background-color: #fff;
+    appearance: none; /* Remove default arrow */
+    background-image: url('data:image/svg+xml;charset=US-ASCII,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down" viewBox="0 0 16 16"><path d="M3.204 5h9.592L8 10.481 3.204 5z"/></svg>');
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 16px 16px;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
   }
   
+  .sort-dropdown:hover {
+    border-color: #aaa;
+  }
+  
+  .sort-dropdown:focus {
+    border-color: #007bff;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+    outline: none;
+  }
+  
+  .sort-dropdown option {
+    padding: 10px;
+    font-size: 16px;
+  }
+  
+
+  
+  
   .customer-info-container {
-    padding: 20px;
+    /* padding: 20px; */
     background-color: #f8f9fa;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
