--- a/src/components/styles/register.css
+++ b/src/components/styles/register.css
@@ -21,7 +21,8 @@ section .container {
   height: 100vh;
   background: #fff;
   box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
-  /* overflow: hidden; */
+  /* margin: 0; */
+  overflow: hidden;
 }
 
 /* section .container  {
