--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -31,11 +31,11 @@
     }
   }
   
-/* .bg-blue-500 {
+.bg-blue-500 {
   background-color: rgb(255, 128, 0);
 }
 .text-blue-500{
   color: rgb(255, 128, 0);
-} */
+}
 
   
