--- a/src/components/WeddingVideo/WeddingVideo.css
+++ b/src/components/WeddingVideo/WeddingVideo.css
@@ -2,7 +2,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  --contentMaxHeight: 95vh;
+  --contentMaxHeight: 75vh;
 }
 * {
   padding: 0;
@@ -11,48 +11,64 @@
 }
 
 .main {
-  background: #786ef6;
+  background: white;
   padding: 10px 0px;
+  
 }
 .main > h2 {
   margin: 0;
   text-align: center;
+}
+.main-wrapper{
+  display: flex;
+  flex-direction: column;
+  min-height: var(--contentMaxHeight);
 }
 .mainContainer {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 10px;
+  width: 86vw;
   padding: 8px;
-  justify-content: center;
+  border: 1px solid black;
+  justify-content: space-between;
+  margin: auto;
 }
 
 .sidebar {
   flex: 1;
-  background: #b4f2f3;
-  border-radius: 5px;
-  padding: 40px 10px;
+  /* background: #b4f2f3; */
+  /* justify-content: center; */
+  /* border-radius: 5px; */
+  padding: 10px 15px;
   /* min-width: 200px; */
   /* max-width: 300px; */
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   display: flex;
   gap: 15px;
-  height: var(--contentMaxHeight);
-  box-shadow: 4px 4px 7px 1px #000;
+  /* height: var(--contentMaxHeight); */
+  /* box-shadow: 4px 4px 7px 1px #000; */
+  margin-bottom: 0px;
+  /* border-bottom: 1px solid black; */
+  /* background-color: #570000; */
 }
 
 .mainbar {
   flex: 20;
   background: white;
+  color: white;
   border-radius: 5px;
-  padding: 20px 10px;
+  /* padding: 20px 10px; */
   /* min-width: 400px; */
   /* max-width: 600px; */
   display: flex;
+  /* justify-content: center; */
+  width: 60vw;
   flex-direction: column;
-  height: var(--contentMaxHeight);
-  box-shadow: 4px 4px 7px 1px #000;
+  min-height: var(--contentMaxHeight);
+  
 }
 
 
@@ -86,11 +102,6 @@
   letter-spacing: 2px;
   font-size: 100px;
   font-size: 35px !important;
-}
-
-.configuration h2 {
-  text-align: center;
-  /* margin: 10px auto; */
 }
 
 .inputText {
@@ -136,20 +147,22 @@ input[type="file"] {
   border: 1px solid #ccc;
   border-radius: 5px;
   display: flex;
-  padding: 30px;
+  padding: 10px;
   cursor: pointer;
-  background-color: #b5b4f3;
+  background-color: #570000;
   justify-content: center;
   align-items: center;
-  font-size: 28px;
-  width: 28px;
-  height: 28px;
+  font-size: 25px;
+  width: 40px;
+  height: 40px;
+  color: white;
+  
   vertical-align: middle;
   position: relative;
 }
 
 .custom-file-upload:hover {
-  background-color: #9b99ec;
+  background-color: #c44141;
 }
 
 .tooltip {
@@ -159,7 +172,7 @@ input[type="file"] {
   top: 30px;
   left: 50px;
   width: max-content;
-  background: #e1f2ef;
+  background: #c44141;
   border-radius: 5px;
   font-size: 16px;
   padding: 5px;
@@ -243,8 +256,8 @@ video {
   text-align: center;
   background-color: #fff5f7;
   position: relative;
-  width: 90%;
-  height: 90%;
+  width: 100%;
+  min-height: inherit;
   /* width: 300px;
   height: 200px; */
   margin: auto;
