--- a/src/components/Other/DraggableResizableDiv/DraggableResizableDiv.css
+++ b/src/components/Other/DraggableResizableDiv/DraggableResizableDiv.css
@@ -3,12 +3,14 @@
   border: 1px solid #000;
   /* z-index: 1; */
   position: absolute !important;
+  
 }
 
 .resizable-box {
   display: flex;
   align-items: center;
   justify-content: center;
+  cursor: pointer !important;
   /* overflow: hidden; */
 }
 
@@ -38,7 +40,7 @@
 }
 
 .context-menu {
-  position: absolute;
+  position: relative;
   background: #fff;
   border: 1px solid #ccc;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
