--- a/src/components/Other/DraggableResizableDiv/DraggableResizableDiv.css
+++ b/src/components/Other/DraggableResizableDiv/DraggableResizableDiv.css
@@ -38,7 +38,7 @@
 }
 
 .context-menu {
-  position: absolute;
+  position: relative;
   background: #fff;
   border: 1px solid #ccc;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
