--- a/src/components/WeddingVideo/WeddingVideo.css
+++ b/src/components/WeddingVideo/WeddingVideo.css
@@ -28,7 +28,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 10px;
+  /* gap: 10px; */
   width: 86vw;
   /* padding: 8px; */
   border: 1px solid black;
@@ -147,16 +147,15 @@ input[type="file"] {
   border: 1px solid #ccc;
   border-radius: 5px;
   display: flex;
-  padding: 10px;
+  padding: 8px;
   cursor: pointer;
   background-color: #570000;
   justify-content: center;
   align-items: center;
   font-size: 25px;
-  width: 40px;
-  height: 40px;
+  width: max-content;
+  height: 35px;
   color: white;
-  
   vertical-align: middle;
   position: relative;
 }
