--- a/src/components/Other/sideConfiguration/SideConfiguration.css
+++ b/src/components/Other/sideConfiguration/SideConfiguration.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   max-width: 14vw;
   /* height: 80vh; */
-  overflow-y: auto;
+  /* overflow-y: auto; */
   align-items: center;
   gap: 25px;
   min-width: 16vw;
